--- a/assets/css/_settings.styl
+++ b/assets/css/_settings.styl
@@ -37,7 +37,7 @@ column-width = 60px
 gutter-width = 20px
 columns = 12
 
-// colors palet
+// colors Palette
 red = #d14233
 rightred = #e85445
 darkred = #a02626
@@ -65,5 +65,10 @@ darkbrown = #6e3c10
 gray = #ecf0f1
 rightgray = #fafafa
 darkgray = #8c9899
-white = #fff
 black = #272727
+rightblack = #393939
+darkblack = #000000
+white = #fff
+
+// Edit Palette
+greenblue = #2fb293
