--- a/views/layout.jade
+++ b/views/layout.jade
@@ -58,7 +58,6 @@ html
 
     // Script Setting
     script(data-main="js/main", src="http://code.jquery.com/jquery-latest.min.js")
-    script(data-main="js/main", src="js/require.js")
 
     // Facebook
     div#facebook.
@@ -72,6 +71,6 @@ html
         }(document, 'script', 'facebook-jssdk'));</script>
 
     // main script codes
-    script(data-main="js/main", src="js/main.coffee")
+    script(data-main="js/main", src="js/main.js")
 
 
