--- a/public/css/master.css
+++ b/public/css/master.css
@@ -1,607 +1,1 @@
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-main,
-nav,
-section,
-summary {
-  display: block;
-}
-audio,
-canvas,
-video {
-  display: inline-block;
-  *display: inline;
-  *zoom: 1;
-}
-audio:not([controls]) {
-  display: none;
-  height: 0;
-}
-[hidden] {
-  display: none;
-}
-html {
-  font-family: sans-serif;
-  -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
-  font-size: 100%;
-}
-button,
-input,
-select,
-textarea {
-  font-family: sans-serif;
-}
-body {
-  margin: 0;
-}
-a:focus {
-  outline: thin dotted;
-}
-a:active,
-a:hover {
-  outline: 0;
-}
-p,
-pre {
-  margin: 1em 0;
-}
-blockquote {
-  margin: 1em 40px;
-}
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
-}
-h2 {
-  font-size: 1.5em;
-  margin: 0.83em 0;
-}
-h3 {
-  font-size: 1.17em;
-  margin: 1em 0;
-}
-h4 {
-  font-size: 1em;
-  margin: 1.33em 0;
-}
-h5 {
-  font-size: 0.83em;
-  margin: 1.67em 0;
-}
-h6 {
-  font-size: 0.67em;
-  margin: 2.33em 0;
-}
-abbr[title] {
-  border-bottom: 1px dotted;
-}
-b,
-strong {
-  font-weight: bold;
-}
-dfn {
-  font-style: italic;
-}
-hr {
-  -moz-box-sizing: content-box;
-  -webkit-box-sizing: content-box;
-  -moz-box-sizing: content-box;
-  -o-box-sizing: content-box;
-  -ms-box-sizing: content-box;
-  box-sizing: content-box;
-  height: 0;
-}
-mark {
-  background: #ff0;
-  color: #000;
-}
-code,
-kbd,
-pre,
-samp {
-  font-family: 'Bitstream Vera Sans Mono', Consolas, Courier, monospace, serif;
-  _font-family: 'courier new', 'Bitstream Vera Sans Mono', Consolas, Courier, monospace;
-  font-size: 1em;
-}
-pre {
-  white-space: pre-wrap;
-}
-q {
-  quotes: "\201C" "\201D" "\2018" "\2019";
-}
-small {
-  font-size: 80%;
-}
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-sup {
-  top: -0.5em;
-}
-sub {
-  bottom: -0.25em;
-}
-dl,
-menu,
-ol,
-ul {
-  margin: 1em 0;
-  padding: 0 0 0 40px;
-}
-dl {
-  padding: 0;
-}
-dd {
-  margin: 0 0 0 40px;
-}
-nav ul,
-nav ol {
-  list-style: none;
-  list-style-image: none;
-}
-img {
-  border: 0;
-  -ms-interpolation-mode: bicubic;
-}
-svg:not(:root) {
-  overflow: hidden;
-}
-figure {
-  margin: 0;
-}
-form {
-  margin: 0;
-}
-fieldset {
-  border-color: #c0c0c0;
-  margin: 0 2px;
-  border: 1px solid #c0c0c0;
-  padding: 0.35em 0.625em 0.75em;
-}
-legend {
-  border: 0;
-  padding: 0;
-  *margin-left: -7px;
-}
-button,
-input,
-select,
-textarea {
-  font-family: inherit;
-  font-size: 100%;
-  margin: 0;
-  vertical-align: baseline;
-  *vertical-align: middle;
-}
-button,
-input {
-  line-height: normal;
-}
-button,
-select {
-  text-transform: none;
-}
-button,
-html input[type="button"],
-input[type="reset"],
-input[type="submit"] {
-  -webkit-appearance: button;
-  cursor: pointer;
-  *overflow: visible;
-}
-button[disabled],
-html input[disabled] {
-  cursor: default;
-}
-input[type="checkbox"],
-input[type="radio"] {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -o-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  box-sizing: border-box;
-  padding: 0;
-  *height: 13px;
-  *width: 13px;
-}
-input[type="search"] {
-  -webkit-appearance: textfield;
-  -webkit-box-sizing: content-box;
-  -moz-box-sizing: content-box;
-  -o-box-sizing: content-box;
-  -ms-box-sizing: content-box;
-  box-sizing: content-box;
-}
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-:-moz-focus-inner,
-input::-moz-focus-inner {
-  border: 0;
-  padding: 0;
-}
-textarea {
-  overflow: auto;
-  vertical-align: top;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-body {
-  width: 100%;
-  zoom: 1;
-}
-body:before,
-body:after {
-  content: "";
-  display: table;
-}
-body:after {
-  clear: both;
-}
-body {
-  font-family: "Helvetica Neue", "游ゴシック", YuGothic, "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, Helvetica, Arial, sans-serif;
-}
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-main,
-nav,
-section,
-summary {
-  display: block;
-}
-audio,
-canvas,
-video {
-  display: inline-block;
-  *display: inline;
-  *zoom: 1;
-}
-audio:not([controls]) {
-  display: none;
-  height: 0;
-}
-[hidden] {
-  display: none;
-}
-html {
-  font-family: sans-serif;
-  -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
-  font-size: 150%;
-  line-height: 1.3333333333333333em;
-}
-button,
-input,
-select,
-textarea {
-  font-family: sans-serif;
-}
-body {
-  margin: 0;
-}
-a:focus {
-  outline: thin dotted;
-}
-a:active,
-a:hover {
-  outline: 0;
-}
-p,
-pre {
-  margin: 1.3333333333333333em 0;
-}
-blockquote {
-  margin: 1.3333333333333333em 40px;
-}
-h1 {
-  font-size: 2em;
-  line-height: 1.3333333333333333em;
-  margin-top: 0.6666666666666666em;
-  margin-bottom: 0.6666666666666666em;
-}
-h2 {
-  font-size: 1.5em;
-  line-height: 1.7777777777777777em;
-  margin-top: 0.8888888888888888em;
-  margin-bottom: 0.8888888888888888em;
-}
-h3 {
-  font-size: 1.17em;
-  line-height: 2.2792022792022792em;
-  margin-top: 1.1396011396011396em;
-  margin-bottom: 1.1396011396011396em;
-}
-h4 {
-  font-size: 1em;
-  line-height: 1.3333333333333333em;
-  margin-top: 1.3333333333333333em;
-  margin-bottom: 1.3333333333333333em;
-}
-h5 {
-  font-size: 0.83em;
-  line-height: 1.6064257028112452em;
-  margin-top: 1.6064257028112452em;
-  margin-bottom: 1.6064257028112452em;
-}
-h6 {
-  font-size: 0.67em;
-  line-height: 1.990049751243781em;
-  margin-top: 1.990049751243781em;
-  margin-bottom: 1.990049751243781em;
-}
-abbr[title] {
-  border-bottom: 1px dotted;
-}
-b,
-strong {
-  font-weight: bold;
-}
-dfn {
-  font-style: italic;
-}
-hr {
-  -moz-box-sizing: content-box;
-  -webkit-box-sizing: content-box;
-  -moz-box-sizing: content-box;
-  -o-box-sizing: content-box;
-  -ms-box-sizing: content-box;
-  box-sizing: content-box;
-  height: 0;
-}
-mark {
-  background: #ff0;
-  color: #000;
-}
-code,
-kbd,
-pre,
-samp {
-  font-family: 'Bitstream Vera Sans Mono', Consolas, Courier, monospace, serif;
-  _font-family: 'courier new', 'Bitstream Vera Sans Mono', Consolas, Courier, monospace;
-  font-size: 1em;
-  line-height: 1.3333333333333333em;
-}
-pre {
-  white-space: pre-wrap;
-}
-q {
-  quotes: "\201C" "\201D" "\2018" "\2019";
-}
-small {
-  font-size: 80%;
-}
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-sup {
-  top: -0.5em;
-}
-sub {
-  bottom: -0.25em;
-}
-dl,
-menu,
-ol,
-ul {
-  margin: 1.3333333333333333em 0;
-  padding: 0 0 0 40px;
-}
-dl {
-  padding: 0;
-}
-dd {
-  margin: 0 0 0 40px;
-}
-nav ul,
-nav ol {
-  list-style: none;
-  list-style-image: none;
-}
-img {
-  border: 0;
-  -ms-interpolation-mode: bicubic;
-}
-svg:not(:root) {
-  overflow: hidden;
-}
-figure {
-  margin: 0;
-}
-form {
-  margin: 0;
-}
-fieldset {
-  border-color: #c0c0c0;
-  margin: 0 2px;
-  border-top-style: solid;
-  border-top-width: 0.041666666666666664em;
-  padding-top: 1.2916666666666667em;
-  border-bottom-style: solid;
-  border-bottom-width: 0.041666666666666664em;
-  padding-bottom: 1.2916666666666667em;
-  border-left-style: solid;
-  border-left-width: 0.041666666666666664em;
-  padding-left: 1.2916666666666667em;
-  border-right-style: solid;
-  border-right-width: 0.041666666666666664em;
-  padding-right: 1.2916666666666667em;
-}
-legend {
-  border: 0;
-  padding: 0;
-  *margin-left: -7px;
-}
-button,
-input,
-select,
-textarea {
-  font-family: inherit;
-  font-size: 100%;
-  margin: 0;
-  vertical-align: baseline;
-  *vertical-align: middle;
-}
-button,
-input {
-  line-height: normal;
-}
-button,
-select {
-  text-transform: none;
-}
-button,
-html input[type="button"],
-input[type="reset"],
-input[type="submit"] {
-  -webkit-appearance: button;
-  cursor: pointer;
-  *overflow: visible;
-}
-button[disabled],
-html input[disabled] {
-  cursor: default;
-}
-input[type="checkbox"],
-input[type="radio"] {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -o-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  box-sizing: border-box;
-  padding: 0;
-  *height: 13px;
-  *width: 13px;
-}
-input[type="search"] {
-  -webkit-appearance: textfield;
-  -webkit-box-sizing: content-box;
-  -moz-box-sizing: content-box;
-  -o-box-sizing: content-box;
-  -ms-box-sizing: content-box;
-  box-sizing: content-box;
-}
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-:-moz-focus-inner,
-input::-moz-focus-inner {
-  border: 0;
-  padding: 0;
-}
-textarea {
-  overflow: auto;
-  vertical-align: top;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-html {
-  font-size: 100%;
-}
-@media (min-width: 40rem) {
-  html {
-    font-size: 112%;
-  }
-}
-@media (min-width: 64rem) {
-  html {
-    font-size: 120%;
-  }
-}
-*,
-*:before,
-*:after {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -o-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  box-sizing: border-box;
-}
-.container {
-  margin: 0 auto;
-  max-width: 62.5rem;
-  width: 90%;
-}
-.sub-container {
-  margin: 0 auto;
-  max-width: 48rem;
-  width: 90%;
-}
-@media (min-width: 40rem) {
-  .column {
-    float: left;
-    padding-left: 1rem;
-    padding-right: 1rem;
-  }
-  .column.full {
-    width: 100%;
-  }
-  .column.two-thirds {
-    width: 66.7%;
-  }
-  .column.two-sub-thirds {
-    width: 75%;
-  }
-  .column.half {
-    width: 50%;
-  }
-  .column.third {
-    width: 33.3%;
-  }
-  .column.sub-third {
-    width: 25%;
-  }
-  .column.fourth {
-    width: 25%;
-  }
-  .column.sixth {
-    width: 16.655%;
-  }
-  .column.flow-opposite {
-    float: right;
-  }
-}
-.clearfix:before,
-.clearfix:after {
-  content: " ";
-  display: table;
-}
-.clearfix:after {
-  clear: both;
-}
-.clearfix {
-  *zoom: 1;
-}
-@media (min-width: 40rem) {
-  .column.flow-opposite {
-    float: right;
-  }
-}
+h1{margin:.67em 0}h2{margin:.83em 0}h3{margin:1em 0}h4{margin:1.33em 0}h5{margin:1.67em 0}h6{margin:2.33em 0}fieldset{border:1px solid silver}body{width:100%;zoom:1}body:after,body:before{content:"";display:table}body:after{clear:both}body{font-family:"Helvetica Neue","游ゴシック",YuGothic,"ヒラギノ角ゴ ProN W3","Hiragino Kaku Gothic ProN","メイリオ",Meiryo,Helvetica,Arial,sans-serif}article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section,summary{display:block}audio,canvas,video{display:inline-block}audio:not([controls]){display:none;height:0}[hidden]{display:none}html{font-family:sans-serif;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;line-height:1.3333333333333333em}body{margin:0}a:focus{outline:dotted thin}a:active,a:hover{outline:0}p,pre{margin:1.3333333333333333em 0}blockquote{margin:1.3333333333333333em 40px}h1{font-size:2em;line-height:1.3333333333333333em;margin-top:.6666666666666666em;margin-bottom:.6666666666666666em}h2{font-size:1.5em;line-height:1.7777777777777777em;margin-top:.8888888888888888em;margin-bottom:.8888888888888888em}h3{font-size:1.17em;line-height:2.2792022792022792em;margin-top:1.1396011396011396em;margin-bottom:1.1396011396011396em}h4{font-size:1em;line-height:1.3333333333333333em;margin-top:1.3333333333333333em;margin-bottom:1.3333333333333333em}h5{font-size:.83em;line-height:1.6064257028112452em;margin-top:1.6064257028112452em;margin-bottom:1.6064257028112452em}h6{font-size:.67em;line-height:1.990049751243781em;margin-top:1.990049751243781em;margin-bottom:1.990049751243781em}abbr[title]{border-bottom:1px dotted}b,strong{font-weight:700}dfn{font-style:italic}hr{-webkit-box-sizing:content-box;-moz-box-sizing:content-box;-o-box-sizing:content-box;-ms-box-sizing:content-box;box-sizing:content-box;height:0}mark{background:#ff0;color:#000}code,kbd,pre,samp{font-family:'Bitstream Vera Sans Mono',Consolas,Courier,monospace,serif;font-size:1em;line-height:1.3333333333333333em}pre{white-space:pre-wrap}q{quotes:"\201C" "\201D" "\2018" "\2019"}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sup{top:-.5em}sub{bottom:-.25em}dl,menu,ol,ul{margin:1.3333333333333333em 0;padding:0 0 0 40px}dl{padding:0}dd{margin:0 0 0 40px}nav ol,nav ul{list-style:none}img{border:0;-ms-interpolation-mode:bicubic}svg:not(:root){overflow:hidden}figure,form{margin:0}fieldset{border-color:silver;margin:0 2px;border-style:solid;border-width:.041666666666666664em;padding:1.2916666666666667em}legend{border:0;padding:0}button,input,select,textarea{font-family:inherit;font-size:100%;margin:0;vertical-align:baseline}button,input{line-height:normal}button,select{text-transform:none}button,html input[type=button],input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer}button[disabled],html input[disabled]{cursor:default}input[type=checkbox],input[type=radio]{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;-o-box-sizing:border-box;-ms-box-sizing:border-box;box-sizing:border-box;padding:0}input[type=search]{-webkit-appearance:textfield;-webkit-box-sizing:content-box;-moz-box-sizing:content-box;-o-box-sizing:content-box;-ms-box-sizing:content-box;box-sizing:content-box}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none}:-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}textarea{overflow:auto;vertical-align:top}table{border-collapse:collapse;border-spacing:0}html{font-size:100%}@media (min-width:40rem){html{font-size:112%}}@media (min-width:64rem){html{font-size:120%}}*,:after,:before{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;-o-box-sizing:border-box;-ms-box-sizing:border-box;box-sizing:border-box}.container{margin:0 auto;max-width:62.5rem;width:90%}.sub-container{margin:0 auto;max-width:48rem;width:90%}@media (min-width:40rem){.column{float:left;padding-left:1rem;padding-right:1rem}.column.full{width:100%}.column.two-thirds{width:66.7%}.column.two-sub-thirds{width:75%}.column.half{width:50%}.column.third{width:33.3%}.column.fourth,.column.sub-third{width:25%}.column.sixth{width:16.655%}.column.flow-opposite{float:right}}.clearfix:after,.clearfix:before{content:" ";display:table}.clearfix:after{clear:both}@media (min-width:40rem){.column.flow-opposite{float:right}}
